syntax = "proto3";

package authcommunication;

service Profile {
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
}

enum Role {
  INSTRUCTOR = 0;
  COORDINATOR = 1;
  STUDENT = 2;
  ADMINISTRATOR = 3;
}

message CreateProfileRequest {
  string id = 1;
  string name = 2;
  string surname = 3;
  Role role = 4;
};

message CreateProfileResponse {
  bool is_valid = 1;
};